# vizel

./: .gitignore  .travis.yml  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: python-package.yml
tests/: test_vizel.py
tests/.cache/v/cache/: lastfailed
tests/data/: 202002251025_This_is_the_first_test_zettel.md  202003211727_This_is_the_second_test_zettel.md
tests/data/zettelkasten_md/: 03242020003215-eda-explained.md  03272020061037-electrodermal-activity.md  202002251025_This_is_the_first_test_zettel.md  202003211727_This_is_the_second_test_zettel.md
tests/data/zettelkasten_txt/: 03242020003215-eda-explained.txt  03272020061037-electrodermal-activity.txt  1_invalid.txt  202002241029_Broken_references_Zettel.txt  202002241029_Other_zettel.txt  202002251025_This_is_the_first_test_zettel.txt  202005011017_All_by_myself.txt
vizel/: cli.py  vizel.py
vizel.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
