[tool.poetry]
name = "vizel"
version = "0.1.0"
description = "Vizualise a Zettelkasten"
authors = ["Basil Philipp <basil@interdimensional-television.com>"]
license = "GPL-3.0-only"
readme = "README.md"
homepage = "https://github.com/BasilPH/vizel"
repository = "https://github.com/BasilPH/vizel"
keywords = ["zettelkasten", "knowledge-management"]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Topic :: Utilities",
    "Topic :: Text Processing",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.8"
networkx = "^2.4"
click = "^7.1.1"
graphviz = "^0.13.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
vizel = 'vizel.cli:main'
