[tool.poetry]
name = "vizel"
version = "0.1.3"
description = "Vizualise a Zettelkasten"
authors = ["Basil Philipp <basil@interdimensional-television.com>"]
license = "GPL-3.0-only"
readme = "README.md"
homepage = "https://github.com/BasilPH/vizel"
repository = "https://github.com/BasilPH/vizel"
keywords = ["zettelkasten", "knowledge-management"]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Topic :: Utilities",
    "Topic :: Text Processing",
]

[tool.poetry.dependencies]
python = "^2.7 || ^3.5"
networkx = [ 
            {version =  "2.2", python="^2.7"},
            {version =  "2.4", python="^3.5"}
        ]
click = "^7.1.1"
graphviz = "^0.13.2"

[tool.poetry.dev-dependencies]
pytest = [ 
            {version =  "^4.6", python="^2.7"},
            {version =  "^5.2", python="^3.5"}
        ]

[tool.poetry.scripts]
vizel = 'vizel.cli:main'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

